monticore-generator/src/test/resources/cocos/invalid/A2030/A2030b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2030;

grammar A2030b {

  A implements B;

}
